Sticky footer + fix overflowing header & footer

--- a/app/assets/stylesheets/partials/_main.sass
+++ b/app/assets/stylesheets/partials/_main.sass
@@ -12,3 +12,5 @@ a
   &:hover, &:active
     color: lighten($link-color, 10%)
 
+p
+  margin: .75em 0
